color theme extra space fixed

--- a/dashboards-observability/public/components/event_analytics/explorer/visualizations/config_panel/config_panel.scss
+++ b/dashboards-observability/public/components/event_analytics/explorer/visualizations/config_panel/config_panel.scss
@@ -189,3 +189,7 @@ $vis-editor-sidebar-min-width: 350px;
 .panel_title:first-letter {
   text-transform: uppercase;
 }
+
+.color-theme-combo-box-option .euiFlexItem.euiFlexItem--flexGrowZero {
+  display: none;
+}
